# 3DINTACT

./: .gitignore  CMakeLists.txt  README.md
applications/app-01-procam-register-surface/: CMakeLists.txt  reproject.cpp
applications/app-02-procam-place-icons/: CMakeLists.txt  icons.cpp
applications/app-03-procam-map-icons/: CMakeLists.txt  mapping.cpp
doc/: 1.project-structure.md  README.md
doc/man/: 1.project-structure.md  2.cmake-build.md  3.adaptors.md
examples/: CMakeLists.txt
examples/Ex-1__print-pointcloud/: CMakeLists.txt  main.cpp
examples/Ex-2__print-pointcloud-segment/: CMakeLists.txt  main.cpp
examples/Ex-3__print-pointcloud-clusters/: CMakeLists.txt  main.cpp
examples/Ex-4__find-epsilon-helper/: CMakeLists.txt  main.cpp
examples/Ex-5__find-vacant-tabletop-surface-space/: CMakeLists.txt  main.cpp
examples/Ex-6__3D-render-tabletop-environment/: CMakeLists.txt  main.cpp
examples/Ex-7__2D-detect-tabletop-objects/: CMakeLists.txt  main.cpp
examples/chromakeying/: CMakeLists.txt  main.cpp
examples/cluster-use/: CMakeLists.txt  main.cpp
examples/example-01-show-pointcloud/: CMakeLists.txt  pcloud.cpp
examples/example-02-show-syncd-depth-image/: CMakeLists.txt  dimage.cpp
examples/example-03-segment-pcloud/: CMakeLists.txt  segment.cpp
examples/example-04-cluster-pcloud/: CMakeLists.txt  cluster.cpp
examples/example-05-vacant-surface/: CMakeLists.txt  vacant.cpp
examples/example-06-chromakey/: CMakeLists.txt
examples/example-07-3D-render/: CMakeLists.txt  render.cpp
examples/example-08-detect-objects/: CMakeLists.txt  objects.cpp
examples/example-09-find-epsilon/: CMakeLists.txt  epsilon.cpp
examples/object-detection/: CMakeLists.txt  main.cpp
examples/viewer/: CMakeLists.txt
libs/KNN/: .gitignore
libs/KNN/include/: knn.h
libs/Point/include/: point.h
libs/Point/src/: point.cpp
libs/SVD/: README.md
libs/SVD/src/: svd.cpp
libs/YOLOv5-cpp/include/: object.h  od.h
libs/YOLOv5-cpp/src/: od.cpp
libs/calibration/include/: calibration.h
libs/calibration/src/: calibration.cpp
libs/cast/include/: cast.h
libs/cast/src/: cast.cpp
libs/edge/include/: edge.h
libs/i3d/: README.md
libs/i3d/include/: helpers.h  i3d.h  i3dmacros.hpp  i3dpcl.h  i3dscene.h  i3dtimer.h  i3dutils.h  io.h  macros.hpp  ply.h  usage.h  utilities.h
libs/i3d/src/: helpers.cpp  i3d.cpp  i3dpcl.cpp  i3dutils.cpp  io.cpp  ply.cpp  timer.cpp  usage.cpp  utilities.cpp
libs/intact/include/: intact.h
libs/intact/src/: intact.cpp
libs/kinect/include/: kinect.h
libs/knn/: README.md
libs/knn/include/: knn.h
libs/knn/src/: knn.cpp
libs/or/src/: yolov5.h
libs/outliers/include/: outliers.h
libs/outliers/src/: outliers.cpp
libs/point/include/: point.h
libs/point/src/: point.cpp
libs/procam-calibration/include/: chessboard.h
libs/proposal/include/: proposal.h
libs/proposal/src/: proposal.cpp
libs/searcher/: README.md
libs/searcher/include/: searcher.h
libs/searcher/src/: searcher.cpp
libs/surface/include/: icon.h  object.h  surface.h  window.h
libs/surface/src/: surface.cpp
libs/svd/: README.md
libs/svd/include/: svd.h
libs/svd/src/: svd.cpp
libs/viewer/include/: tinyply.h  viewer.h
libs/viewer/src/: viewer.cpp
resources/: class.names
scripts/: example_01.sh  example_02.sh  example_03.sh  example_04.sh  example_05.sh  example_06.sh  example_07.sh  example_08.sh  example_09.sh  example_10.sh  execute_3dintact.sh  get_libtorch.sh  initialize_azure_kinect_sensor_sdk.sh  libtorch.sh  main.sh  run_2D_detect_tabletop_objects_example.sh  run_3D_render_tabletop_environment_example.sh  run_chromaexample.sh  run_clusterexample.sh  run_find_epsilon_helper.sh  run_find_vacant_tabletop_surface_space_example.sh  run_i3d.sh  run_odexample.sh  run_print_pointcloud_clusters_example.sh  run_print_pointcloud_example.sh  run_print_pointcloud_segment_example.sh  run_viewerexample.sh
src/: main.cpp
