# add_subdirectory(Ex-1__print-pointcloud)
# add_subdirectory(Ex-2__print-pointcloud-segment)
# add_subdirectory(Ex-3__print-pointcloud-clusters)
# add_subdirectory(Ex-4__find-epsilon-helper)
# add_subdirectory(Ex-5__find-vacant-tabletop-surface-space)
# add_subdirectory(Ex-6__3D-render-tabletop-environment)
add_subdirectory(Ex-7__2D-detect-tabletop-objects)
