add_subdirectory(example-01-show-pointcloud)
add_subdirectory(example-02-show-syncd-depth-image)
add_subdirectory(example-03-segment-pcloud)
add_subdirectory(example-04-cluster-pcloud)
add_subdirectory(example-05-vacant-surface)
add_subdirectory(example-06-chromakey)
add_subdirectory(example-07-3D-render)
add_subdirectory(example-08-detect-objects)
add_subdirectory(example-09-find-epsilon)